feat: add APIs to support login with pin and MFA (#102)
