# src/main/java/com/dreamsportslabs/guardian/dto/response/BiometricTokenResponseDto.java
@@ -1,0 +1,22 @@
+package com.dreamsportslabs.guardian.dto.response;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
+import com.fasterxml.jackson.databind.annotation.JsonNaming;
+import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@Getter
+@AllArgsConstructor
+@JsonInclude(JsonInclude.Include.NON_NULL)
+@JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
+public class BiometricTokenResponseDto {
+  private String accessToken;
+  private String refreshToken;
+  private String idToken;
+  private String tokenType;
+  private Integer expiresIn;
+  private Boolean isNewUser;
+  private List<MfaFactorDto> mfaFactors;
+}
